# Evolution-Simulator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Project ARIA.sln  README.md  changes.txt  todo.md
Project ARIA/: Project ARIA.vcxproj  Project ARIA.vcxproj.filters  README.md
Project ARIA/src/: food_manager.h  main.cpp  settings.h
Project ARIA/src/Protozoa/: Protozoa.h  cell.h  debug.cpp  genetics.h  genome.h  init.cpp  physics.cpp  rendering.cpp  spring.h
Project ARIA/src/Protozoa/extension/: SinWaveManager.cpp  SinWaveManager.h  debug.cpp  debug_graphics.cpp  init.cpp  organic.cpp  physics.cpp  rendering.cpp
Project ARIA/src/Utils/: Camera.hpp  Circle.h  buffer_renderer.h  button.h  font_renderer.hpp  fps_manager.h  line_graph.h  o_vector.hpp  optimised_vector.h  random.h  round_rect.h  thread_pool.h  time.h  utility.h  utility_SFML.h
Project ARIA/src/Utils/Graphics/: Circle.h  CircleBatchRenderer.h  OrganicColorMutator.h  SFML_Grid.h  buffer_renderer.h  font_renderer.hpp  simple_spatial_grid.h  sin_wave_grapher.h  spatial_hash_grid.h
Project ARIA/src/Utils/NeuralNetworks/: GeneticNeuralNetwork.h  NeuralNetworkUI.h
Project ARIA/src/Utils/UI/: Camera.hpp  button.h  line_graph.h  text_box.h
Project ARIA/src/Utils/fonts/: font_renderer.hpp
Project ARIA/src/builder/: builder.cpp  builder.h
Project ARIA/src/food/: food.h  food_manager.h
Project ARIA/src/simulation/: simulation.cpp  simulation.h
Project ARIA/src/world/: ProtozoaManager.h  world.cpp  world.h  world_updating.cpp
media/: aria_settings.toml
src/: food_manager.h  main.cpp  pch.h  settings.cpp  settings.h
src/Food/: FoodManager.cpp  FoodManager_spawn.cpp  FoodManager_update.cpp  food.h  food_manager.h
src/Protozoa/: Protozoa.h  cell.h  genome.h  spring.h
src/Protozoa/extension/: SinWaveManager.cpp  debug_graphics.cpp  mutations.cpp  organic.cpp  physics.cpp
src/Protozoa/genetics/: CellGenome.h  GenomeManager.h  SpringGenome.h
src/Utils/: o_vector.hpp  random.h  thread_pool.h  utility.h  utility_SFML.h
src/Utils/Graphics/: Circle.h  CircleBatchRenderer.h  OrganicColorMutator.h  SFML_Grid.h  font_renderer.hpp  simple_spatial_grid.h  sin_wave_grapher.h  spatial_hash_grid.h
src/Utils/Graphics/spatial_grid/: fixed_span.h  simple_spatial_grid.h  spatial_grid_renderer.cpp  spatial_grid_renderer.h
src/Utils/Graphics/spatial_grid/simulation/: sim_snapshot.h  simulation.cpp  simulation.h  triple_buffer.h
src/Utils/Graphics/spatial_grid/simulation/imgui/: control_panel.h
src/Utils/Graphics/spatial_grid/simulation/imgui/helpers/: plot_utils.h
src/Utils/Graphics/spatial_grid/simulation/imgui/tabs/: display_tab.cpp  grid_tab.h  organism_tab.cpp  organism_tab.h  simulation_tab.cpp  simulation_tab.h  statistics_tab.cpp  tagged_tab.cpp
src/Utils/NeuralNetworks/: NeuralNetworkUI.h
src/Utils/UI/: Camera.hpp  CrashLogger.h  button.h  line_graph.h  slider.h  text_box.h
src/builder/: builder.cpp
src/simulation/: events.cpp  imgui_handling.cpp  shared_state.h  sim_command.h  sim_snapshot.h  simulation.cpp  simulation.h
src/simulation/imgui/: control_panel.cpp  control_panel.h  imgui_handling.cpp  imgui_population.cpp  imgui_protozoa.cpp  population_history.h  ui_context.h
src/simulation/imgui/helpers/: confirm_button.h  plot_utils.h  toast_system.h
src/simulation/imgui/tabs/: display_tab.cpp  display_tab.h  graphs_tab.cpp  graphs_tab.h  grid_tab.cpp  grid_tab.h  i_tab.h  organism_tab.cpp  organism_tab.h  simulation_tab.cpp  simulation_tab.h  stat_row.h  statistics_tab.cpp  statistics_tab.h  tagged_tab.cpp  tagged_tab.h  tools_tab.cpp  tools_tab.h
src/world/: ProtozoaManager.h  collision_resolution.cpp  food_resolution.cpp  world.cpp  world.h  world_state.h  world_updating.cpp
